# NaiveCC

./: .gitignore  0.asm  Cargo.toml  README.md  hello  hello.c  hello.koopa
helper/: AveMujippa.sh  BanGTest.sh  ItsMyRust.sh  Morfnicasm.sh  PoppinTest.sh  RaiseADocker.sh
report/: report.md  实践报告.md
src/: ast.rs  backend.rs  frontend.rs  main.rs  sysy.lalrpop
src/backend/: address.rs  assign.rs  constants.rs  dataflow.rs  env.rs  flow.rs  frames.rs  generate.rs  instruction.rs  lifetime.rs  location.rs  manager.rs  mod.rs  program.rs  register.rs  registers.rs  riscv.rs  util.rs
src/backend/opt/: algorithm.rs  cp.rs  dce.rs  dre.rs  helper.rs  immfix.rs  jump.rs  mod.rs  peephole.rs
src/common/: mod.rs  util.rs
src/frontend/: ast.rs  builtin.rs  context.rs  dataflow.rs  env.rs  eval.rs  generate.rs  loops.rs  mod.rs  symbol.rs  transform.rs  util.rs
src/frontend/opt/: bfs.rs  cb.rs  cf.rs  ci.rs  cp.rs  cse.rs  dbe.rs  dce.rs  mod.rs  uce.rs  util.rs
src/opt/: flow.rs
src/optimize/: dbe.rs  dve.rs  mod.rs
src/utils/: mod.rs  namer.rs
tests/: mod.rs
tests/testcases/lv6/: 6_multiple_returns.c
tests/testcases/lv7/: 11_complex.c
